add_library(MMassgate
	ct_assert.h
	MMG_AccessControl.cpp
	MMG_AccessControl.h
	MMG_AccountProtocol.cpp
	MMG_AccountProtocol.h
	MMG_AccountProxy.cpp
	MMG_AccountProxy.h
	MMG_AuthToken.cpp
	MMG_AuthToken.h
	MMG_AutoMatch.cpp
	MMG_AutoMatch.h
	MMG_Average.h
	MMG_BannedWordsProtocol.cpp
	MMG_BannedWordsProtocol.h
	MMG_BannerProtocol.cpp
	MMG_BannerProtocol.h
	MMG_BitStream.h
	MMG_BlackListMapProtocol.cpp
	MMG_BlackListMapProtocol.h
	MMG_BlockTEA.cpp
	MMG_BlockTEA.h
	MMG_CanPlayClanMatchProtocol.cpp
	MMG_CanPlayClanMatchProtocol.h
	MMG_CdKeyChecker.cpp
	MMG_CdKeyChecker.h
	MMG_CdKeyValidator.cpp
	MMG_CdKeyValidator.h
	MMG_Chat.cpp
	MMG_Chat.h
	MMG_CipherFactory.cpp
	MMG_CipherFactory.h
	MMG_Clan.cpp
	MMG_Clan.h
	MMG_ClanChallengeStream.cpp
	MMG_ClanChallengeStream.h
	MMG_ClanColosseumProtocol.cpp
	MMG_ClanColosseumProtocol.h
	MMG_ClanGuestbookProtocol.cpp
	MMG_ClanGuestbookProtocol.h
	MMG_ClanListener.cpp
	MMG_ClanListener.h
	MMG_ClanMatchHistoryProtocol.cpp
	MMG_ClanMatchHistoryProtocol.h
	MMG_ClanMessageProtocol.cpp
	MMG_ClanMessageProtocol.h
	MMG_ClanNamesProtocol.cpp
	MMG_ClanNamesProtocol.h
	MMG_ClientSettings.h
	MMG_Constants.h
	mmg_contentdownloader.h
	MMG_Cryptography.h
	MMG_CryptoHash.cpp
	MMG_CryptoHash.h
	MMG_DecorationProtocol.cpp
	MMG_DecorationProtocol.h
	MMG_DSChangeServerRanking.cpp
	MMG_DSChangeServerRanking.h
	MMG_EncryptedConnection.cpp
	MMG_EncryptedConnection.h
	MMG_EncryptionTester.cpp
	MMG_EncryptionTester.h
	MMG_Fingerprint.cpp
	MMG_Fingerprint.h
	MMG_FriendsLadderProtocol.cpp
	MMG_FriendsLadderProtocol.h
	MMG_Gang.h
	MMG_GenericCache.h
	MMG_GroupMemberships.h
	MMG_HashToMapName.cpp
	MMG_HashToMapName.h
	MMG_HttpRequester.h
	MMG_IAccountProxyCallbacks.h
	MMG_IChatRoomListener.h
	MMG_ICipher.cpp
	MMG_ICipher.h
	MMG_IClanSearchResultsListener.h
	MMG_ICryptoHashAlgorithm.h
	MMG_IFriendsListener.cpp
	MMG_IFriendsListener.h
	MMG_IHttpHandler.h
	MMG_IHttpRequester.cpp
	MMG_IKeyManager.h
	MMG_INATNegotiationMessagingListener.cpp
	MMG_INATNegotiationMessagingListener.h
	MMG_INewsItemListener.h
	MMG_InstantMessageListener.cpp
	MMG_InstantMessageListener.h
	MMG_IProfileListener.h
	MMG_IProfileSearchResultsListener.h
	MMG_IStateChangeListener.h
	MMG_IStreamable.h
	MMG_LadderProtocol.cpp
	MMG_LadderProtocol.h
	MMG_MassgateNotifications.h
	MMG_MasterConnection.cpp
	MMG_MasterConnection.h
	MMG_Messaging.cpp
	MMG_Messaging.h
	MMG_MinimalProfileCache.cpp
	MMG_MinimalProfileCache.h
	MMG_MiscClanProtocols.cpp
	MMG_MiscClanProtocols.h
	MMG_NATNegotiationProtocol.cpp
	MMG_NATNegotiationProtocol.h
	MMG_NewsItem.cpp
	MMG_NewsItem.h
	MMG_NewsTracker.h
	MMG_NullCipher.cpp
	MMG_NullCipher.h
	MMG_Optional.h
	MMG_OptionalContentProtocol.cpp
	MMG_OptionalContentProtocol.h
	MMG_Options.cpp
	MMG_Options.h
	MMG_PCCProtocol.cpp
	MMG_PCCProtocol.h
	MMG_PlainText.cpp
	MMG_PlainText.h
	MMG_Profile.cpp
	MMG_Profile.h
	MMG_ProfileEditableVariablesProtocol.cpp
	MMG_ProfileEditableVariablesProtocol.h
	MMG_ProfileGuestbookProtocol.cpp
	MMG_ProfileGuestbookProtocol.h
	MMG_ProfileIgnoreProtocol.cpp
	MMG_ProfileIgnoreProtocol.h
	MMG_ProtocolDelimiters.h
	MMG_Protocols.cpp
	MMG_Protocols.h
	MMG_QuestionListener.cpp
	MMG_QuestionListener.h
	MMG_RankProtocol.cpp
	MMG_RankProtocol.h
	MMG_ReliablePacketHandler.h
	MMG_ReliableUdpSocket.cpp
	MMG_ReliableUdpSocket.h
	MMG_ReliableUdpSocketServerFactory.cpp
	MMG_ReliableUdpSocketServerFactory.h
	MMG_SecureRudpConnection.cpp
	MMG_SecureRudpConnection.h
	MMG_SecureTcpClientConnectionFactory.cpp
	MMG_SecureTcpClientConnectionFactory.h
	MMG_SecureTcpConnection.cpp
	MMG_SecureTcpConnection.h
	MMG_ServerBannerDownloader.cpp
	MMG_ServerBannerDownloader.h
	MMG_ServerFilter.cpp
	MMG_ServerFilter.h
	MMG_ServerProtocol.h
	MMG_ServersAndPorts.cpp
	MMG_ServersAndPorts.h
	MMG_ServerTracker.cpp
	MMG_ServerTracker.h
	MMG_ServerVariables.cpp
	MMG_ServerVariables.h
	MMG_SingleKeyManager.cpp
	MMG_SingleKeyManager.h
	MMG_Stats.cpp
	MMG_Stats.h
	MMG_StatsTrackingProtocol.cpp
	MMG_StatsTrackingProtocol.h
	MMG_Tiger.cpp
	MMG_Tiger.h
	MMG_TrackableServer.cpp
	MMG_TrackableServer.h
	MMG_Util.h
	MMG_WaitForSlotProtocol.cpp
	MMG_WaitForSlotProtocol.h
	stdafx.cpp
	stdafx.h
)

add_library(Lib::MMassgate ALIAS MMassgate)

target_link_libraries(MMassgate
	PRIVATE
		Lib::MCommon2
		Lib::MNetwork
		Lib::MServerBox
)

target_include_directories(MMassgate
	PUBLIC
		${CMAKE_CURRENT_SOURCE_DIR}
)

set_target_properties(MMassgate
	PROPERTIES
		CXX_STANDARD 98
		FOLDER "lib"
)
